k8s/applications/sonarr-uhd/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr-uhd
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.14
          ports:
            - name: ingress
              containerPort: 8989
          volumeMounts:
            - name: sonarr-uhd
              mountPath: /config
            - name: libraries
              mountPath: /tv-uhd
              subPath: tv/uhd
            - name: applications
              mountPath: /trash
              subPath: trash
            - name: applications
              mountPath: /data
              subPath: qbittorrent
      volumes:
        - name: sonarr-uhd
          persistentVolumeClaim:
            claimName: sonarr-uhd
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
