k8s/applications/sonarr-uhd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-uhd
spec:
  type: ClusterIP
  ports:
    - name: sonarr
      port: 8989
      targetPort: sonarr
